--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>伟大的FE</title>
 
     <!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
@@ -31,18 +32,18 @@
           <div class="navbar-collapse collapse" role="navigation">
             <ul class="nav navbar-nav">
               <li class="hidden-sm hidden-md">
-                  <a href="/" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'v2doc'])">
+                  <a href="/article/blog/index.html" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'v2doc'])">
                       blog
                   </a>
               </li>
               <li>
-                  <a href="/blog" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'v3doc'])">学习REACT</a></li>
+                  <a href="/article/blog/index.html" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'v3doc'])">学习REACT</a></li>
               <li>
-                  <a href="/angular.html" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'v4doc'])">学习Angular</a>
+                  <a href="/article/note/angular.html" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'v4doc'])">学习Angular</a>
               </li>
-              <li><a href="/p/lesscss/" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'less'])">fis</a></li>
-              <li><a href="http://www.jquery123.com/" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'jquery'])">immutable</a></li>
-              <li><a href="http://expo.bootcss.com" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'expo'])">练习</a></li>
+              <li><a href="http://fis.baidu.com/" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'less'])">fis</a></li>
+              <li><a href="https://github.com/facebook/immutable-js/" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'jquery'])">immutable</a></li>
+              <li><a href="https://www.npmjs.com/" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'expo'])">练习</a></li>
               <!-- <li><i class="fa fa-fire job-hot"></i><a href="http://www.liepin.com/event/bootstrap/index.shtml?mscid=b_o_0001" target="_blank" onclick="_hmt.push(['_trackEvent', 'navbar', 'click', 'navbar-高薪工作'])">高薪工作</a></li> -->
             </ul>
           </div>
@@ -56,9 +57,9 @@
                     <article>
                         <ul class="nav nav-pills nav-stacked">
                           <li role="presentation" class="active"><a href="#">Home</a></li>
-                          <li role="presentation"><a href="#">bolg</a></li>
-                          <li role="presentation"><a href="#">note</a></li>
-                          <li role="presentation"><a href="/angular.html">Angular</a></li>
+                          <li role="presentation"><a href="/article/blog/index.html">bolg</a></li>
+                          <li role="presentation"><a href="/article/blog/note.html">note</a></li>
+                          <li role="presentation"><a href="/article/note/angular.html">Angular</a></li>
                         </ul>
                     </article>
                 </main>
