--- a/angular/note/angular.html
+++ b/angular/note/angular.html
@@ -7,4 +7,4 @@
 
 <h3 id="angular-list">Angular List</h3>
 <hr>
-<p>  Angular 条件语句 <a href="/article/note/case.html" title="if switch">if  switch</a> inline link.</p>
+<p>  Angular 条件语句 <a href="/angular/note/case.html" title="if switch">if  switch</a> inline link.</p>
