--- a/angular/note/note.html
+++ b/angular/note/note.html
@@ -3,5 +3,30 @@
 <p><p><link rel="stylesheet" href="./../../stylesheets/styles.css"></p></p>
 <p><link rel="stylesheet" href="./../../stylesheets/github-light.css"></p>
 <p><meta name="keywords" content="react,angualr,ng-if,ngif,ng-switch,ng-switch-when" /></p>
-<p><meta name="description" content="Angular，指令的条件语句" />
-ssssss</p>
+<meta name="description" content="Angular，指令的条件语句" />
+
+<h3 id="-">选择什么样的框架？</h3>
+<p> <em>选择什么样的框架？就要了解框架的核心价值！不是所有的都是和你的项目</em></p>
+<ul>
+<li><h4 id="jquery-">Jquery 全能小战士</h4>
+</li>
+<li><h4 id="angular-">Angular 数据双向绑定</h4>
+<hr>
+<pre><code class="lang-html">
+      &lt;div ng-model=&quot;isShow&quot;&gt;
+          &lt;div ng-switch-when=&quot;true&quot;&gt;我是否会被发现&lt;/div&gt;
+      &lt;/div&gt;
+</code></pre>
+<p>  <em>ng-show/ng-hide指令是个简化style=&quot;display: none;&quot;隐藏DOM元素的技巧.这些元素没有被DOM树移除.</em></p>
+</li>
+<li><h4 id="react-v-dom-">React V-DOM 完美单项数据流</h4>
+<hr>
+<pre><code class="lang-HTML"> React.createClass(&quot;HelloWorlod&quot;,function(){
+
+         return {
+
+         }
+     })
+</code></pre>
+</li>
+</ul>
