--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         <ul class="nav nav-pills nav-stacked">
                           <li role="presentation" class="active"><a href="#">Home</a></li>
                           <li role="presentation"><a href="/article/blog/index.html">bolg</a></li>
-                          <li role="presentation"><a href="/article/blog/note.html">note</a></li>
-                          <li role="presentation"><a href="/article/note/angular.html">Angular</a></li>
+                          <li role="presentation"><a href="/angular/note/note.html">note</a></li>
+                          <li role="presentation"><a href="/angular/note/angular.html">Angular</a></li>
                         </ul>
                     </article>
                 </main>
