--- a/angular/note/angular.html
+++ b/angular/note/angular.html
@@ -7,4 +7,9 @@
 
 <h3 id="angular-list">Angular List</h3>
 <hr>
-<p>  Angular 条件语句 <a href="/angular/note/case.html" title="if switch">if  switch</a> inline link.</p>
+<ul>
+<li>Angular 条件语句 <a href="/angular/note/case.html" title="if switch">if  switch</a> inline link.</li>
+<li>Angular 解析过程 <a href="/angular/note/parse-process.html" title="if switch">angularjs 执行的全过程</a> inline link.</li>
+<li>Angular $watch的性能优化 <a href="/angular/note/watch.html" title="if switch">angularjs 执行的全过程</a> inline link.</li>
+<li>Angular $滚屏加载的性能优化 <a href="/angular/note/scroll-loading.html" title="if switch">angularjs 执行的全过程</a> inline link.</li>
+</ul>
